# btest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample_scripts/: sample_script.txt
scripts/: analyze_movie.py
src/: list_movies.py  main.py
src/api/: __init__.py  models.py  server.py
src/core/: __init__.py  analyzer.py  character.py  config.py  conversation.py  exceptions.py  llm_helper.py  logger.py  script_finder.py  text_processor.py
src/core/scrapers/: __init__.py  base.py  cinematheque.py  imsdb.py
tests/: test_analyzer.py  test_api.py  test_api_endpoints.py  test_config.py  test_exceptions.py  test_scrapers.py  test_script_finder.py
