[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btest"
version = "0.1.0"
authors = [
  { name = "Author" },
]
description = "Automated Bechdel Test for films"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.0.1",
    "pydantic>=2.7.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",  # For testing FastAPI
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
