[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btest"
version = "0.1.0"
authors = [
  { name = "Author" },
]
description = "Automated Bechdel Test for films"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "langchain>=0.1.0,<1.0.0",
    "langchain-community>=0.0.10,<1.0.0",
    "langchain-ollama>=0.0.1,<1.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.26.0,<1.0.0",  # For testing FastAPI
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.1,<1.0.0",
    "black>=24.1.1,<25.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "llm: marks tests that require Ollama LLM service (deselect with '-m \"not llm\"')"
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_incomplete_stub = true
strict_optional = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
